--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -74,5 +74,9 @@
             CKEDITOR.remove(CKEDITOR.instances['Html']);
         }
         CKEDITOR.replace('Html', { height: 400 });
+
+        $(function () {
+            $('#AuthorId').sx_gvl();
+        });
     </script>
 }
