--- a/GE.WebAdmin/Views/Articles/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Articles/_GridView.cshtml
@@ -1,34 +1,27 @@
 ﻿@model VMArticle[]
 @{
     Layout = null;
-    var pagerInfo = ViewBag.PagerInfo;
-    var filter = ViewBag.Filter != null ? (VMArticle)ViewBag.Filter : null;
-    var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
 
 
-@Html.SxGridView(
+@Html.SxGridView(Model,
     new SxExtantions.SxGridViewSettings<VMArticle>
     {
-        UpdateTargetId = "grid-articles",
-        Data = Model,
         Columns = new SxExtantions.SxGridViewColumn<VMArticle>[]{
             new SxExtantions.SxGridViewColumn<VMArticle>{FieldName="DateCreate", Caption="Дата создания"},
             new SxExtantions.SxGridViewColumn<VMArticle>{FieldName="DateOfPublication", Caption="Дата публикации"},
             new SxExtantions.SxGridViewColumn<VMArticle>{FieldName="Title", Caption="Заголовок"},
-            new SxExtantions.SxGridViewColumn<VMArticle>{FieldName="SeoInfoId", Caption="Инфо", Template=(m)=> {
-                return !m.SeoInfoId.HasValue? "<i class=\"text-danger\">не заданы теги seo</i>":null;
+            new SxExtantions.SxGridViewColumn<VMArticle>{FieldName="SeoTagsId", Caption="Инфо", Template=(m)=> {
+                return !m.SeoTagsId.HasValue? "<i class=\"text-danger\">не заданы теги seo</i>":null;
             } },
             new SxExtantions.SxGridViewColumn<VMArticle>{FieldName="Show", Caption="Показывать", Template=(m)=> {
                 return m.Show? "Да":"Нет";
             } }
         },
-        PagerInfo = pagerInfo,
-        Filter = filter,
-        SortDirections = sortDirections,
-        FuncRowCssClass = (a) => {
-            return a.Show ? null : "warning";
-        }
-    },
-        new { @class = "table table-condensed table-bordered table-responsive table-striped" }
+        DataAjaxUrl="/articles",
+        EnableCreating=true,
+        CreateRowUrl="/articles/edit",
+        EnableEditing=true,
+        EditRowUrl = x => { return "/articles/edit/" + x.Id; }
+    }
     )
