--- a/GE.WebAdmin/Views/Banners/_GroupBanners.cshtml
+++ b/GE.WebAdmin/Views/Banners/_GroupBanners.cshtml
@@ -5,15 +5,15 @@
 }
 
 
-@Html.SxGV(Model, new SxExtantions.SxGVSettings<SxVMBanner>
+@Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<SxVMBanner>
 {
-    Columns = new SxExtantions.SxGvColumn<SxVMBanner>[] {
-        new SxExtantions.SxGvColumn<SxVMBanner>{FieldName="Id", Caption="Идентификатор"},
-        new SxExtantions.SxGvColumn<SxVMBanner>{FieldName="Url", Caption="Адрес перехода", Template=(b)=> {
+    Columns = new SxExtantions.SxGridViewColumn<SxVMBanner>[] {
+        new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Id", Caption="Идентификатор"},
+        new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Url", Caption="Адрес перехода", Template=(b)=> {
             return string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a target=\"_blank\" href=\"{0}\">{0}</a>", b.Url);
         } },
-        new SxExtantions.SxGvColumn<SxVMBanner>{FieldName="Title", Caption="Заголовок"},
-        new SxExtantions.SxGvColumn<SxVMBanner>{FieldName="PictureId", Caption="Картинка", Template=(p)=> {
+        new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Title", Caption="Заголовок"},
+        new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="PictureId", Caption="Картинка", Template=(p)=> {
             return string.Format("<a data-lightbox=\"roadtrip\" data-title=\"{1}\" data-toggle=\"tooltip\" title=\"Помотреть картинку\" href=\"/pictures/picture/{0}\"><i class=\"fa fa-picture-o\"></i></a>", p.PictureId, p.Title);
         }}
 },
