--- a/GE.WebAdmin/Views/SiteSettings/EditSite.cshtml
+++ b/GE.WebAdmin/Views/SiteSettings/EditSite.cshtml
@@ -68,7 +68,7 @@
     <script src="~/content/dist/js/lightbox.min.js"></script>
     <script>
         $(function () {
-            $('#LogoPath').sx_gvl();
+            $('#LogoPath, #SiteBgPath, #SiteFaveiconPath').sx_gvl();
 
             $('#LogoPath').on('click', 'a', function (event) {
                 event.stopPropagation();
