--- a/GE.WebAdmin/Views/SiteTestQuestions/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SiteTestQuestions/_GridView.cshtml
@@ -4,15 +4,15 @@
 }
 
 
-@Html.SxGV(Model,
-        new SxExtantions.SxGVSettings<SxVMSiteTestQuestion>
+@Html.SxGridView(Model,
+        new SxExtantions.SxGridViewSettings<SxVMSiteTestQuestion>
         {
-            Columns = new SxExtantions.SxGvColumn<SxVMSiteTestQuestion>[]{
-                new SxExtantions.SxGvColumn<SxVMSiteTestQuestion>{FieldName="DateCreate", Caption="Дата создания"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestQuestion>{FieldName="TestTitle", Caption="Тест"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestQuestion>{FieldName="BlockTitle", Caption="Блок"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestQuestion>{FieldName="Text", Caption="Текст"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestQuestion>{FieldName="IsCorrect", Caption="Корректность",Template= (q)=> {
+            Columns = new SxExtantions.SxGridViewColumn<SxVMSiteTestQuestion>[]{
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestQuestion>{FieldName="DateCreate", Caption="Дата создания"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestQuestion>{FieldName="TestTitle", Caption="Тест"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestQuestion>{FieldName="BlockTitle", Caption="Блок"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestQuestion>{FieldName="Text", Caption="Текст"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestQuestion>{FieldName="IsCorrect", Caption="Корректность",Template= (q)=> {
                     return q.IsCorrect?"Да":"Нет";
                 } }
             },
