--- a/GE.WebAdmin/Views/Users/Edit.cshtml
+++ b/GE.WebAdmin/Views/Users/Edit.cshtml
@@ -63,5 +63,9 @@
                 $(id).fadeOut('fast');
             }, 1000);
         }
+
+        $(function () {
+            $('#AvatarId').sx_gvl();
+        });
     </script>
 }
