--- a/GE.WebAdmin/Views/Videos/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Videos/_GridView.cshtml
@@ -3,18 +3,18 @@
     Layout = null;
 }
 
-@Html.SxGV(Model,
-            new SxExtantions.SxGVSettings<SxVMVideo>
+@Html.SxGridView(Model,
+            new SxExtantions.SxGridViewSettings<SxVMVideo>
             {
-                Columns = new SxExtantions.SxGvColumn<SxVMVideo>[]{
-            new SxExtantions.SxGvColumn<SxVMVideo>{FieldName="Id", Caption="Внутренний идентификатор", Template=(v)=> {
+                Columns = new SxExtantions.SxGridViewColumn<SxVMVideo>[]{
+            new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="Id", Caption="Внутренний идентификатор", Template=(v)=> {
                 return string.Format("<b class=\"text-info\">{0}</b>", v.Id);
             }},
-            new SxExtantions.SxGvColumn<SxVMVideo>{FieldName="VideoId", Caption="Идентификатор", Template=(v)=> {
+            new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="VideoId", Caption="Идентификатор", Template=(v)=> {
                 return string.Format("<b class=\"text-warning\">{0}</b>", v.VideoId);
             } },
-            new SxExtantions.SxGvColumn<SxVMVideo>{FieldName="Title", Caption="Название видео"},
-            new SxExtantions.SxGvColumn<SxVMVideo>{FieldName="SourceUrl", Caption="Источник", Template=(v)=> {
+            new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="Title", Caption="Название видео"},
+            new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="SourceUrl", Caption="Источник", Template=(v)=> {
                 return v.SourceUrl!=null?string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a rel=\"nofollow\" href=\"{0}\">{0}</a>", v.SourceUrl):null;
             } }
         },
