--- a/GE.WebAdmin/less/site.less
+++ b/GE.WebAdmin/less/site.less
@@ -6,6 +6,7 @@
 
 a, a:link, a:active, a:visited, a:focus, button, button:link, button:visited, button:active, button:focus, input:focus{
     outline:none !important;
+    color:inherit;
 }
 
 body{
