--- a/GE.WebAdmin/Views/AuthorAphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/AuthorAphorisms/Edit.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = isNew ? "Добавить автора афоризмов" : "Редактировать автора афоризмов \"" + Model.Name + "\"";
 }
 
+@section styles{
+    <link href="~/content/dist/css/lightbox.min.css" rel="stylesheet" />
+}
+
 <h2>@ViewBag.Title</h2>
 @if (!isNew)
 {
@@ -20,10 +24,25 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
 
-    <div class="form-group">
-        @Html.LabelFor(x => x.Name)
-        @Html.EditorFor(x => x.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите имя автора" } })
-        @Html.ValidationMessageFor(x => x.Name)
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.Name)
+                @Html.EditorFor(x => x.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите имя автора" } })
+                @Html.ValidationMessageFor(x => x.Name)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.PictureId, new { @class = "control-label" })
+                @if (Model.PictureId.HasValue)
+                {
+                    <a data-original-title="Помотреть картинку" onclick="x()" data-lightbox="roadtrip" data-title="Фото @Model.Name" data-toggle="tooltip" title="" href="/pictures/picture/@Model.PictureId"><i class="fa fa-picture-o"></i></a>
+                }
+                @Html.EditorFor(x => x.PictureId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.PictureId)
+            </div>
+        </div>
     </div>
 
     <div class="form-group">
@@ -33,18 +52,22 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(x => x.PictureId, new { @class = "control-label" })
-        @if (!isNew && Model.PictureId.HasValue)
-            {
-            @:&nbsp;
-            <a href="@Url.Action("picture", new { controller="pictures", id=Model.PictureId})">Показать</a>
-        }
-        @Html.EditorFor(x => x.PictureId, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(x => x.PictureId)
-    </div>
-
-    <div class="form-group">
         <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
         <a href="@Url.Action("index")" class="btn btn-default">Назад</a>
     </div>
 </form>
+
+@section scripts{
+    <script src="~/content/dist/js/lightbox.min.js"></script>
+    <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
+    <script>
+        if (CKEDITOR.instances['Description']) {
+            CKEDITOR.remove(CKEDITOR.instances['Description']);
+        }
+        CKEDITOR.replace('Description', { height: 400 });
+
+        $(function () {
+            $("#PictureId").sx_gvl();
+        });
+    </script>
+}
