--- a/GE.WebAdmin/Views/AuthorAphorisms/_FindGridView.cshtml
+++ b/GE.WebAdmin/Views/AuthorAphorisms/_FindGridView.cshtml
@@ -4,12 +4,14 @@
 }
 
 
-@Html.SxGV(Model,
-        new SxExtantions.SxGVSettings<VMAuthorAphorism>
+@Html.SxGridView(Model,
+        new SxExtantions.SxGridViewSettings<VMAuthorAphorism>
         {
-            Columns = new SxExtantions.SxGvColumn<VMAuthorAphorism>[]{
-            new SxExtantions.SxGvColumn<VMAuthorAphorism>{FieldName="Name", Caption="Имя" },
+            Columns = new SxExtantions.SxGridViewColumn<VMAuthorAphorism>[]{
+            new SxExtantions.SxGridViewColumn<VMAuthorAphorism>{FieldName="Name", Caption="Имя" },
         },
-            DataAjaxUrl= "AuthorAphorisms"
+            DataAjaxUrl= "/AuthorAphorisms/findgridview",
+            RowId = x => { return x.Id.ToString(); },
+            RowText = x => { return x.Name; }
         }
     )
