--- a/GE.WebAdmin/Views/Employees/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Employees/_GridView.cshtml
@@ -3,11 +3,11 @@
     Layout = null;
 }
 
-@Html.SxGV(Model, new SxExtantions.SxGVSettings<SxVMEmployee>()
+@Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<SxVMEmployee>()
 {
-    Columns = new SxExtantions.SxGvColumn<SxVMEmployee>[] {
-        new SxExtantions.SxGvColumn<SxVMEmployee> { FieldName="Email", Caption="Email"},
-        new SxExtantions.SxGvColumn<SxVMEmployee> { FieldName="NikName", Caption="NikName"},
+    Columns = new SxExtantions.SxGridViewColumn<SxVMEmployee>[] {
+        new SxExtantions.SxGridViewColumn<SxVMEmployee> { FieldName="Email", Caption="Email"},
+        new SxExtantions.SxGridViewColumn<SxVMEmployee> { FieldName="NikName", Caption="NikName"},
     },
     EnableEditing = true,
     EditRowUrl = (x) => { return "/employees/edit/" + x.Id; },
