--- a/GE.WebAdmin/Views/Games/Edit.cshtml
+++ b/GE.WebAdmin/Views/Games/Edit.cshtml
@@ -5,6 +5,10 @@
     var hasError = Convert.ToBoolean(ViewBag.HasError);
 }
 
+@section styles{
+    <link href="~/content/dist/css/lightbox.min.css" rel="stylesheet" />
+}
+
 <h2>
     @(Model.Id == 0 ? "Добавить игру" : "Редактировать игру")
 </h2>
@@ -67,6 +71,10 @@
         <div class="col-md-4">
             <div class="form-group">
                 @Html.LabelFor(x => x.FrontPictureId, new { @class = "control-label" })
+                @if (Model.FrontPictureId.HasValue)
+                {
+                    <a data-original-title="Помотреть картинку" onclick="x()" data-lightbox="roadtrip" data-title="Иконка @Model.Title" data-toggle="tooltip" title="" href="/pictures/picture/@Model.FrontPictureId"><i class="fa fa-picture-o"></i></a>
+                }
                 @Html.EditorFor(x => x.FrontPictureId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(x => x.FrontPictureId)
             </div>
@@ -74,6 +82,10 @@
         <div class="col-md-4">
             <div class="form-group">
                 @Html.LabelFor(x => x.GoodPictureId, new { @class = "control-label" })
+                @if (Model.FrontPictureId.HasValue)
+                {
+                    <a data-original-title="Помотреть картинку" onclick="x()" data-lightbox="roadtrip" data-title="Иконка для новостей @Model.Title" data-toggle="tooltip" title="" href="/pictures/picture/@Model.GoodPictureId"><i class="fa fa-picture-o"></i></a>
+                }
                 @Html.EditorFor(x => x.GoodPictureId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(x => x.GoodPictureId)
             </div>
@@ -81,6 +93,10 @@
         <div class="col-md-4">
             <div class="form-group">
                 @Html.LabelFor(x => x.BadPictureId, new { @class = "control-label" })
+                @if (Model.FrontPictureId.HasValue)
+                {
+                    <a data-original-title="Помотреть картинку" onclick="x()" data-lightbox="roadtrip" data-title="Иконка для статей @Model.Title" data-toggle="tooltip" title="" href="/pictures/picture/@Model.BadPictureId"><i class="fa fa-picture-o"></i></a>
+                }
                 @Html.EditorFor(x => x.BadPictureId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(x => x.BadPictureId)
             </div>
@@ -100,11 +116,16 @@
 </form>
 
 @section scripts{
+    <script src="~/content/dist/js/lightbox.min.js"></script>
     <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript">
         if (CKEDITOR.instances['FullDescription']) {
             CKEDITOR.remove(CKEDITOR.instances['FullDescription']);
         }
         CKEDITOR.replace('FullDescription', { height: 400 });
+
+        $(function () {
+            $('#FrontPictureId, #GoodPictureId, #BadPictureId').sx_gvl();
+        });
     </script>
 }
