--- a/GE.WebAdmin/Views/Games/_FindGridView.cshtml
+++ b/GE.WebAdmin/Views/Games/_FindGridView.cshtml
@@ -1,29 +1,17 @@
 ﻿@model VMGame[]
 @{
     Layout = null;
-    var pagerInfo = ViewBag.PagerInfo;
-    var filter = ViewBag.Filter != null ? (VMGame)ViewBag.Filter : null;
-    var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
 
 
-@Html.SxGridView(
+@Html.SxGridView(Model,
         new SxExtantions.SxGridViewSettings<VMGame>
         {
-            UpdateTargetId = "grid-pictures",
-            Data = Model,
             Columns = new SxExtantions.SxGridViewColumn<VMGame>[]{
             new SxExtantions.SxGridViewColumn<VMGame>{FieldName="Title", Caption="Наименование" }
         },
-            PagerInfo = pagerInfo,
-            Filter = filter,
-            SortDirections = sortDirections,
-            EnableEditing = false,
-            EnableCreate = false,
-            Mode=SxExtantions.SxGridViewMode.Lookup,
-            FuncDataUrl=()=>Url.Action(MVC.Games.FindGridView()),
-            FuncGetId=(x)=>x.Id,
-            FuncTextField=()=> "Title"
-        },
-            new { @class = "table table-condensed table-bordered table-responsive table-striped" }
-    )
+            DataAjaxUrl="/games/findgridview",
+            RowId = x => { return x.Id.ToString(); },
+            RowText = x => { return x.Title; }
+        }
+)
