--- a/GE.WebAdmin/Views/Manuals/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Manuals/_GridView.cshtml
@@ -1,26 +1,23 @@
 ﻿@model VMManual[]
 @{
     Layout = null;
-    var pagerInfo = ViewBag.PagerInfo;
-    var filter = ViewBag.Filter != null ? (VMManual)ViewBag.Filter : null;
-    var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
 
 
-@Html.SxGridView(
+@Html.SxGridView(Model,
     new SxExtantions.SxGridViewSettings<VMManual>
     {
-        UpdateTargetId = "grid-manuals",
-        Data = Model,
         Columns = new SxExtantions.SxGridViewColumn<VMManual>[]{
             new SxExtantions.SxGridViewColumn<VMManual>{FieldName="Title", Caption="Заголовок"},
             new SxExtantions.SxGridViewColumn<VMManual>{FieldName="CategoryId", Caption="Инфо", Template=(m)=> {
                 return string.IsNullOrEmpty(m.CategoryId) ?string.Format("<span class=\"text-danger\">{0}</span>", "Не определена категория"):null;
             } }
         },
-        PagerInfo = pagerInfo,
-        Filter = filter,
-        SortDirections = sortDirections
-    },
-        new { @class = "table table-condensed table-bordered table-responsive table-striped" }
-    )
+        DataAjaxUrl = "/manuals",
+        EnableCreating=true,
+        CreateRowUrl= "/manuals/edit",
+        EnableEditing=true,
+        EditRowUrl = x => { return "/manuals/edit/" + x.Id; }
+
+    }
+ )
