--- a/GE.WebAdmin/Views/SiteTestBlocks/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SiteTestBlocks/_GridView.cshtml
@@ -3,14 +3,14 @@
     Layout = null;
 }
 
-@Html.SxGV(Model,
-        new SxExtantions.SxGVSettings<SxVMSiteTestBlock>
+@Html.SxGridView(Model,
+        new SxExtantions.SxGridViewSettings<SxVMSiteTestBlock>
         {
-            Columns = new SxExtantions.SxGvColumn<SxVMSiteTestBlock>[]{
-                new SxExtantions.SxGvColumn<SxVMSiteTestBlock>{FieldName="DateCreate", Caption="Дата создания"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestBlock>{FieldName="TestTitle", Caption="Тест"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestBlock>{FieldName="Title", Caption="Заголовок"},
-                new SxExtantions.SxGvColumn<SxVMSiteTestBlock>{FieldName="Description", Caption="Описание"}
+            Columns = new SxExtantions.SxGridViewColumn<SxVMSiteTestBlock>[]{
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestBlock>{FieldName="DateCreate", Caption="Дата создания"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestBlock>{FieldName="TestTitle", Caption="Тест"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestBlock>{FieldName="Title", Caption="Заголовок"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTestBlock>{FieldName="Description", Caption="Описание"}
             },
             EnableCreating=true,
             CreateRowUrl= "/sitetestblocks/edit/",
