--- a/GE.WebAdmin/Views/SiteTests/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/_GridView.cshtml
@@ -4,14 +4,14 @@
 }
 
 
-@Html.SxGV(Model,
-        new SxExtantions.SxGVSettings<SxVMSiteTest>
+@Html.SxGridView(Model,
+        new SxExtantions.SxGridViewSettings<SxVMSiteTest>
         {
-            Columns = new SxExtantions.SxGvColumn<SxVMSiteTest>[]{
-                new SxExtantions.SxGvColumn<SxVMSiteTest>{FieldName="DateCreate", Caption="Дата создания"},
-                new SxExtantions.SxGvColumn<SxVMSiteTest>{FieldName="Title", Caption="Заголовок"},
-                new SxExtantions.SxGvColumn<SxVMSiteTest>{FieldName="Description", Caption="Описание"},
-                new SxExtantions.SxGvColumn<SxVMSiteTest>{FieldName="TestType", Caption="Тип" }
+            Columns = new SxExtantions.SxGridViewColumn<SxVMSiteTest>[]{
+                new SxExtantions.SxGridViewColumn<SxVMSiteTest>{FieldName="DateCreate", Caption="Дата создания"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTest>{FieldName="Title", Caption="Заголовок"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTest>{FieldName="Description", Caption="Описание"},
+                new SxExtantions.SxGridViewColumn<SxVMSiteTest>{FieldName="TestType", Caption="Тип" }
             },
             EnableCreating = true,
             CreateRowUrl = "/sitetests/edit",
