--- a/GE.WebAdmin/Views/Statistics/_UserLoginsGridView.cshtml
+++ b/GE.WebAdmin/Views/Statistics/_UserLoginsGridView.cshtml
@@ -3,11 +3,11 @@
     Layout = null;
 }
 
-@Html.SxGV(Model, new SxExtantions.SxGVSettings<SxVMStatisticUserLogin>()
+@Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<SxVMStatisticUserLogin>()
 {
-    Columns = new SxExtantions.SxGvColumn<SxVMStatisticUserLogin>[] {
-        new SxExtantions.SxGvColumn<SxVMStatisticUserLogin> { FieldName="DateCreate", Caption="Дата"},
-        new SxExtantions.SxGvColumn<SxVMStatisticUserLogin> { FieldName="NikName", Caption="Ник-нейм"}
+    Columns = new SxExtantions.SxGridViewColumn<SxVMStatisticUserLogin>[] {
+        new SxExtantions.SxGridViewColumn<SxVMStatisticUserLogin> { FieldName="DateCreate", Caption="Дата"},
+        new SxExtantions.SxGridViewColumn<SxVMStatisticUserLogin> { FieldName="NikName", Caption="Ник-нейм"}
     },
     DataAjaxUrl = "/statistics/userlogins"
 })
