--- a/GE.WebAdmin/Views/UserRoles/_GridView.cshtml
+++ b/GE.WebAdmin/Views/UserRoles/_GridView.cshtml
@@ -3,10 +3,10 @@
     Layout = null;
 }
 
-@Html.SxGV(Model, new SxExtantions.SxGVSettings<SxVMAppRole>() {
-    Columns=new SxExtantions.SxGvColumn<SxVMAppRole>[] {
-        new SxExtantions.SxGvColumn<SxVMAppRole> { FieldName="Name", Caption="Роль"},
-        new SxExtantions.SxGvColumn<SxVMAppRole> { FieldName="Description", Caption="Описание"},
+@Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<SxVMAppRole>() {
+    Columns=new SxExtantions.SxGridViewColumn<SxVMAppRole>[] {
+        new SxExtantions.SxGridViewColumn<SxVMAppRole> { FieldName="Name", Caption="Роль"},
+        new SxExtantions.SxGridViewColumn<SxVMAppRole> { FieldName="Description", Caption="Описание"},
     },
     EnableCreating=true,
     CreateRowUrl="/userroles/edit",
