--- a/GE.WebAdmin/Views/Users/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Users/_GridView.cshtml
@@ -3,15 +3,15 @@
     Layout = null;
 }
 
-@Html.SxGV(Model, new SxExtantions.SxGVSettings<SxVMAppUser>()
+@Html.SxGridView(Model, new SxExtantions.SxGridViewSettings<SxVMAppUser>()
 {
-    Columns = new SxExtantions.SxGvColumn<SxVMAppUser>[] {
-        new SxExtantions.SxGvColumn<SxVMAppUser> { FieldName="NikName", Caption="Ник-нейм"},
-        new SxExtantions.SxGvColumn<SxVMAppUser> { FieldName="Email", Template=(m)=> {
+    Columns = new SxExtantions.SxGridViewColumn<SxVMAppUser>[] {
+        new SxExtantions.SxGridViewColumn<SxVMAppUser> { FieldName="NikName", Caption="Ник-нейм"},
+        new SxExtantions.SxGridViewColumn<SxVMAppUser> { FieldName="Email", Template=(m)=> {
                 return string.Format("<a href=\"mailto:{0}\">{0}</a>", m.Email);
             }},
-        new SxExtantions.SxGvColumn<SxVMAppUser> { FieldName="RoleNames", Caption="Роли"},
-        new SxExtantions.SxGvColumn<SxVMAppUser> { FieldName="IsOnline", Caption="Статус", Template=(u)=> {
+        new SxExtantions.SxGridViewColumn<SxVMAppUser> { FieldName="RoleNames", Caption="Роли"},
+        new SxExtantions.SxGridViewColumn<SxVMAppUser> { FieldName="IsOnline", Caption="Статус", Template=(u)=> {
                 return u.IsOnline?string.Format("<span class=\"badge\">online</span>"):null;
             }}
     },
