--- a/GE.WebAdmin/Views/VideoLinks/_GridView.cshtml
+++ b/GE.WebAdmin/Views/VideoLinks/_GridView.cshtml
@@ -1,32 +1,23 @@
-﻿@model VMVideo[]
+﻿@model SxVMVideo[]
 @{
     Layout = null;
-    var pagerInfo = ViewBag.PagerInfo;
-    var filter = ViewBag.Filter != null ? (VMVideo)ViewBag.Filter : null;
-    var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
-    var mid = (int)ViewBag.MaterialId;
-    var mct = (SX.WebCore.Enums.ModelCoreType)ViewBag.ModelCoreType;
+    int mid = ViewBag.MaterialId;
+    Enums.ModelCoreType mct = ViewBag.ModelCoreType;
 }
 
 
-@Html.SxGridView(
-            new SxExtantions.SxGridViewSettings<VMVideo>
+@Html.SxGridView(Model,
+            new SxExtantions.SxGridViewSettings<SxVMVideo>
             {
-                UpdateTargetId = "grid-videos",
-                Data = Model,
-                Columns = new SxExtantions.SxGridViewColumn<VMVideo>[]{
-            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Id", Caption="Идентификатор"},
-            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="Title", Caption="Название видео"},
-            new SxExtantions.SxGridViewColumn<VMVideo>{FieldName="VideoId", Caption="Идентификатор"}
-        },
-                PagerInfo = pagerInfo,
-                Filter = filter,
-                SortDirections = sortDirections,
-                EnableEditing=false,
-                PagerLink=Url.Action(MVC.VideoLinks.Index(mid:mid, mct: mct, fm: true)),
-                CreateJsLink= "showNotMaterialVideos()",
-                EnableDelete=true,
-                FuncDeleteLink=(v)=>Url.Action(MVC.VideoLinks.DeleteMaterialVideo(mid: mid, mct: mct, vid: v.Id ))
-            },
-        new { @class = "table table-condensed table-bordered table-responsive table-striped" }
+                Columns = new SxExtantions.SxGridViewColumn<SxVMVideo>[]{
+                    new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="Id", Caption="Идентификатор"},
+                    new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="Title", Caption="Название видео"},
+                    new SxExtantions.SxGridViewColumn<SxVMVideo>{FieldName="VideoId", Caption="Идентификатор"}
+                },
+                DataAjaxUrl="/videolinks/index?mid="+mid+"&mct="+mct,
+                EnableDeleting=true,
+                DeleteRowUrl = x => { return "/videolinks/DeleteMaterialVideo?mid=" + mid + "&mct=" + mct + "&vid=" + x.Id; },
+                EnableCreating=true,
+                CreateRowUrl="javascript:void(0)"
+            }
     )
