--- a/GE.WebAdmin/less/sx-gvl.less
+++ b/GE.WebAdmin/less/sx-gvl.less
@@ -11,10 +11,10 @@
     z-index:1;
 }
 
-.sx-gvl[data-is-single-mode="true"] .sx-gv tbody tr:not(.sx-gv__filter-row) {
+.sx-gvl[data-is-single-mode="true"] .sx-gv tbody tr:not(.sx-gv__filter-row), .sx-gvl .sx-tv tbody tr {
     cursor: pointer;
 }
 
-.sx-gvl[data-is-single-mode="true"] .sx-gv tbody tr:not(.sx-gv__filter-row):hover > td {
+.sx-gvl[data-is-single-mode="true"] .sx-gv tbody tr:not(.sx-gv__filter-row):hover > td, .sx-gvl .sx-tv tbody tr:hover > td   {
     background-color:@color-gray !important;
 }
